# Pick-Place_RS2

./: README.md  joint_goals.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduino_magnet/lib/arduino_magnet/: arduino_magnet_node
install/arduino_magnet/share/arduino_magnet/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/block_marker_package/share/block_marker_package/: package.bash  package.zsh
install/image_processor/lib/image_processor/: pixel_publisher  run_gui
install/image_processor/share/image_processor/: package.sh
install/image_processor/share/image_processor/launch/: launch.py
install/pick_place/lib/pick_place/: pick_task
install/pick_place/share/pick_place/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pick_place/share/pick_place/cmake/: pick_placeConfig.cmake
install/positionconv_package/lib/positionconv_package/: position_subscriber
install/positionconv_package/share/positionconv_package/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/positionconv_package/share/positionconv_package/cmake/: positionconv_packageConfig.cmake
install/positionconv_package/share/positionconv_package/launch/: position_subscriber.launch.py
install/positionprov_package/lib/positionprov_package/: position_prov
install/positionprov_package/share/positionprov_package/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
log/: latest_build  latest_list
src/Image_processor/: README.md  capture_pixelate.py
src/Image_processor/image_processor/: README.md  nodes_topics  package.xml  setup.cfg  setup.py
src/Image_processor/image_processor/image_processor/: pixel_publisher.py  pixel_utils.py
src/Image_processor/install/: local_setup.sh  setup.sh
src/Image_processor/log/: latest_build
src/arduino_magnet/: package.xml  setup.cfg  setup.py
src/pick_place/: CMakeLists.txt
src/pick_place/src/: pick_task.cpp
src/positionconv_package/: CMakeLists.txt
src/positionconv_package/install/: local_setup.sh  setup.ps1  setup.sh
src/positionconv_package/install/positionconv_package/lib/positionconv_package/: position_subscriber
src/positionconv_package/install/positionconv_package/share/positionconv_package/: local_setup.sh  package.sh  package.xml
src/positionconv_package/log/: latest_build
src/positionconv_package/src/: position_subscriber.cpp
src/positionconv_package/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/positionconv_package/src/log/: latest_build
src/positionprov_package/: CMakeLists.txt
src/positionprov_package/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/positionprov_package/install/positionprov_package/share/positionprov_package/: local_setup.sh  package.sh  package.xml  package.zsh
src/positionprov_package/log/: latest_build
src/positionprov_package/src/: PositionProv.cpp
(+8 files in other folders)
