<?xml version="1.0"?>
<package format="3">
  <name>image_processor</name>
  <version>0.0.0</version>
  <description>Image processor package</description>
  <maintainer email="easha.mohammedghouseuddin@student.uts.edu.au">easha</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-pil</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>