<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>positionprov_package</name>  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="louisferdinand85@gmail.com">louis</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend> <!-- ROS 2 client library dependency -->
  <depend>geometry_msgs</depend> <!-- Dependency for geometry message types -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
